--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -31,14 +31,17 @@
 .hamburger {
   position: fixed;
   margin: 24px 19px 0;
-  /* border: 1px solid red;
   top: 0px;
-  right: 0px; */
+  right: 0px;
+}
 
+.modeIcon{
+  cursor: pointer;
 }
 
 .navbar_menu {
   display: flex;
+  align-items: center;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -59,8 +62,8 @@
   background-color: #FFFFFF;
 }
   
-.modal-content {
-  background-color: #fff;
+.modal_content {
+  background-color: #000000;
   margin: 15% auto;
   padding: 20px;
   width: 70%;
@@ -73,16 +76,17 @@
 /* Media query for smaller screens */
 @media screen and (max-width: 768px) {
   .nav{
-    display: none;
+    display: block;
   }
 
   .navbar_menu {
     display: none; 
     flex-direction: column;
-    background-color: #333;
+    background-color: #FFFFFF;
     position: absolute;
     width: 100%;
-    top: 60px; 
+    height: 100vh;
+    top: 0; 
     left: 0;
     padding: 10px 0;
     text-align: center;
@@ -100,6 +104,7 @@
     transition: transform 0.3s ease-in-out;
     top: 0px;
     right: 0px;
+    display: block;
   }
 
   .hamburger.active {
@@ -114,7 +119,7 @@
     display: block;
   }
 
-  .modal.show .modal-content {
+  .modal.show .modal_content {
     margin: 10% auto;
     width: 90%;
     max-width: 300px;
@@ -133,6 +138,7 @@
 
   .close{
     cursor: pointer;
+    display: block;
   }
 }
   
