--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,19 @@
   font-size: 16px;
   color: #101828;
   position: relative;
+  transition: background-color 0.3s, color 0.3s;
 }
+
+/* .darkMode {
+  background-color: #333;
+  color: #fff;
+} */
+
+/* Light Mode Styles */
+/* .lightMode {
+  background-color: #fff;
+  color: #333;
+} */
 
 /* @media screen and (max-width: 768px) {
   .App {
