--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -13,13 +13,22 @@
   display: flex;
   justify-content:space-between;
   align-items: center;
+}
 
-  a{
-    font-size: 16px;
-    font-weight: 400;
-    color: #000000;
-    text-decoration: none;
-  }
+.top_nav a{
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+  text-decoration: none;
+}
+
+.backBtn{
+  display: flex;
+  align-items: center;
+}
+
+.backBtn img{
+  margin-left: 8px;
 }
 
 .contact_form {
@@ -60,15 +69,16 @@
   align-items: center;
 }
 
-.form_row {
+.form_row,
+.half_width {
   margin-bottom: 24px;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
 
-.form_row label {
-  /* width: 100%; */
+.form_row label,
+.half_width label {
   margin-bottom: 6px;
   font-size: 14px;
   font-weight: 500;
@@ -79,20 +89,26 @@
 }
 
 .form_row input,
-.form_row textarea {
+.form_row textarea { 
   width: calc(100% - 10px);
-  padding: 5px;
+  padding: 10px 14px;
   border: 1px solid #D0D5DD;
-  padding: 12px 14px;
   color: #667085;
   font-size: 16px;
   font-weight: 400;
+  border-radius: 4px;
 }
 
 .half_width {
   width: calc(50% - 10px);
   margin-right: 20px;
+  margin-bottom: 0px;
 }
+
+.half_width label {
+  margin-bottom: 6px;
+}
+
 
 .half_width:last-child {
   margin-right: 0;
@@ -124,4 +140,86 @@ textarea {
 .send_button:hover {
   background-color: #101828;
   color:#FFFFFF ;
+}
+
+@media screen and (max-width: 1440px) {
+  .container {
+    display: block;
+    height: auto;
+  }
+
+  .top_nav {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+  }
+
+  .contact_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+  }
+
+  .contact{
+    display: flex;
+    width: 100%;
+    height: 80%;
+    margin: 0px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    display: block;
+    height: auto;
+  }
+
+  /* .top_nav {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+  } */
+
+  .contact_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+  }
+
+  .contact{
+    display: flex;
+    width: 100%;
+    height: 80%;
+    margin: 0px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  form_header h4{
+    font-size: 48px;
+    text-align: center;
+    font-weight: 600;
+    line-height: 60px;
+    margin-bottom: 24px;
+  } 
+  
+  .form_header p{
+    font-size: 20px;
+    font-weight: 400;
+    color: #475467;
+    margin-bottom: 48px;
+  
+  
+    a{
+      color: #475467;
+      font-weight: 300;
+    }
+  } 
+  
 }
