--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,28 @@
-*{
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
 .App {
+  width: 100%;
   height: 100vh;
-  font-weight: 400;
-  font-size: 16px;
-  color: #101828;
-  position: relative;
-  transition: background-color 0.3s, color 0.3s;
+  background: var(--background);
+  color: var(--text);
 }
 
-/* .darkMode {
-  background-color: #333;
-  color: #fff;
-} */
+:root {
+  --background: #ffffff;
+  --text: #101828;
+  --muted-text: #475467;
+}
 
-/* Light Mode Styles */
-/* .lightMode {
-  background-color: #fff;
-  color: #333;
-} */
+.dark {
+  --background: #101828;
+  --text: #ffffff;
+  --muted-text: #ffffff;
+}
 
-/* @media screen and (max-width: 768px) {
-  .App {
-    font-size: 12px;
-  }
-  
-} */
+.light {
+  --background: #ffffff;
+  --text: #101828;
+  --muted-text: #475467;
+}
 
+/* * {
+  transition: background 0.3s ease, color 0.3s ease;
+} */
