--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,24 +1,22 @@
 /* ContactPage.css */
 
-.container {
+.contact-page {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
-  padding: 68px 140px;
-  color: #101828;
+  width: 100%;
   height: 100vh;
 }
   
 .top_nav {
   display: flex;
-  justify-content:space-between;
+  justify-content:space-evenly;
   align-items: center;
 }
 
 .top_nav a{
   font-size: 16px;
   font-weight: 400;
-  color: #000000;
+  color: var(--text);
   text-decoration: none;
 }
 
@@ -31,11 +29,23 @@
   margin-left: 8px;
 }
 
+.contact{
+  display: flex;
+  height: 80vh;
+  margin: 0px auto;
+  /* flex-direction: row; */
+  justify-content: center;
+  align-items: center;
+  background: var(--background);
+  color: var(--text);
+}
+
 .contact_form {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 114px 104px;
+  /* border: 1px solid red; */
 }
 
 .form_header h4{
@@ -46,28 +56,22 @@
   margin-bottom: 24px;
 } 
 
+.form_header span{
+  display: block;
+}
+
 .form_header p{
   font-size: 20px;
   font-weight: 400;
-  color: #475467;
+  color: var(--muted-text);
   margin-bottom: 48px;
 
 
   a{
-    color: #475467;
+    color:  var(--muted-text);
     font-weight: 300;
   }
 } 
-
-.contact{
-  display: flex;
-  width: 42%;
-  height: 80%;
-  margin: 0px auto;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 
 .form_row,
 .half_width {
@@ -92,11 +96,12 @@
 .form_row textarea { 
   width: calc(100% - 10px);
   padding: 10px 14px;
-  border: 1px solid #D0D5DD;
-  color: #667085;
+  border: 1px solid  var(--muted-text);
+  color:  var(--text);
   font-size: 16px;
   font-weight: 400;
   border-radius: 4px;
+  background-color: var(--background);
 }
 
 .half_width {
@@ -113,113 +118,78 @@
 .half_width:last-child {
   margin-right: 0;
 }
-
-/* input[type="text"],
-input[type="email"],
-textarea {
-  padding: 8px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  border: 1px solid red;
-} */
-
   
 .send_button {
   padding: 12px 24px;
   font-size: 16px;
-  border: 1px solid #101828;
+  border: 1px solid  var(--text);
   border-radius: 4px;
   cursor: pointer;
   width: 100%;
   margin-top: 32px;
   font-weight: 400;
-  background-color:#ffffff;
+  background-color: var(--background);
+  color: var(--text);
 }
 
 .send_button:hover {
-  background-color: #101828;
-  color:#FFFFFF ;
+  background-color:  var(--text);
+  color: var(--background) ;
 }
 
-@media screen and (max-width: 1440px) {
-  .container {
-    display: block;
-    height: auto;
-  }
-
-  .top_nav {
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-  }
-
-  .contact_form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0px;
-  }
-
-  .contact{
-    display: flex;
-    width: 100%;
-    height: 80%;
-    margin: 0px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-}
 
 @media screen and (max-width: 768px) {
-  .container {
+  .contact-page {
     display: block;
-    height: auto;
   }
 
-  /* .top_nav {
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-  } */
-
   .contact_form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: 0px;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .contact{
-    display: flex;
-    width: 100%;
-    height: 80%;
-    margin: 0px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    width: 90%;
+    justify-content: space-between;
+    /* border: 1px solid red; */
   }
 
-  form_header h4{
-    font-size: 48px;
-    text-align: center;
+  .form_header{
+    /* border: 1px solid red; */
+    width: 100%;
+  }
+
+  .form_header h4{
+    font-size: 24px;
+    text-align: start;
     font-weight: 600;
-    line-height: 60px;
-    margin-bottom: 24px;
+    line-height: 34px;
+    margin-bottom: 12px;
+    /* border: 1px solid red; */
   } 
+
+  .form_header span{
+    display: inline;
+  }
   
   .form_header p{
     font-size: 20px;
     font-weight: 400;
-    color: #475467;
+    color: var(--muted-text);
     margin-bottom: 48px;
   
   
     a{
-      color: #475467;
+      color: var(--muted-text);
       font-weight: 300;
     }
   } 
+
+  .half_width {
+    width: calc(100% - 10px);
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
   
 }
